fixed whitespace wrapping on safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -217,6 +217,7 @@ body {
 
 .footer__text {
   margin: 0;
+  white-space: normal;
 }
 
 /* General */
